--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
 language: go
 
 go:
-  - 1.7
-  - 1.8
+  - "1.9"
+  - "1.10"
+  - "1.11"
+
+env:
+  - DEP_VERSION="0.5.0"
 
 before_install:
-  - go get golang.org/x/tools/cmd/cover github.com/logrusorgru/aurora
+  - curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 -o $GOPATH/bin/dep
+  - chmod +x $GOPATH/bin/dep
+
+install:
+  - dep ensure
 
 script:
   - go test -v -covermode=atomic -coverprofile=coverage.txt
